Modifica import de imagem

--- a/Index.html
+++ b/Index.html
@@ -43,7 +43,7 @@
 
         <!-- Seção de Imagem -->
         <section class="image-section">
-            <img src="/image/foto1.jpg" alt="Foto de Felipe">
+            <img src="./Image/foto1.jpg" alt="Foto de Felipe">
         </section>
     </div>
 
