Correção de caminhos + comentários de recomendação de ajustes

--- a/Index.html
+++ b/Index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio - Imfeliperamos</title>
-    <link rel="stylesheet" href="Style/pageone.css"> <!-- Primeira Página -->
-    <link rel="stylesheet" href="Style/pagetwo.css"> <!-- Segunda Página -->
+    <link rel="stylesheet" href="style/pageone.css"> <!-- Primeira Página -->
+    <link rel="stylesheet" href="style/pagetwo.css"> <!-- Segunda Página -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
@@ -43,7 +43,7 @@
 
         <!-- Seção de Imagem -->
         <section class="image-section">
-            <img src="./Image/foto1.jpg" alt="Foto de Felipe">
+            <img src="image/foto1.jpg" alt="Foto de Felipe">
         </section>
     </div>
 
@@ -67,7 +67,7 @@
 
         <!-- Texto do lado direito -->
         <div class="split-box right">
-            <img class="image-engineering" src="./caminho/para/sua/imagem.jpg" alt="Descrição da imagem">
+            <img class="image-engineering" src="./caminho/para/sua/imagem.jpg" alt="Descrição da imagem"> // vinicius.scherer - Não tem nd linkado
 
             <h2>Engenharia.</h2>
             <p>
