--- a/Index.html
+++ b/Index.html
@@ -67,7 +67,7 @@
 
         <!-- Texto do lado direito -->
         <div class="split-box right">
-            <img class="image-engineering" src="./caminho/para/sua/imagem.jpg" alt="Descrição da imagem"> // vinicius.scherer - Não tem nd linkado
+            <img class="image-engineering" src="./caminho/para/sua/imagem.jpg" alt="Descrição da imagem"> <!--vinicius.scherer - Não tem nd linkado-->
 
             <h2>Engenharia.</h2>
             <p>
