--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
         <!-- Seção de Texto -->
         <section id="pagina1" class="text-section">
             <h1>FRONTEND<br>Developer.</h1>
-            <h2>Gosto de criar conteúdos FrontEnd<br>com ferramentas totalmente funcionais.</h2>
+            <h2>I like to craft solid and scalable frontend products<br> with great user experiences.</h2>
 
             <div class="columns-container">
                 <!-- Primeira Coluna -->
@@ -52,8 +52,6 @@
     <section id="pagina2" class="section split-section">
         <!-- Texto do lado esquerdo -->
         <div class="split-box left">
-            
-
             <h2>Projetar.</h2>
             <p>
                 Provavelmente não sou o designer típico posicionado atrás de uma prancheta do Illustrator ajustando
@@ -67,8 +65,7 @@
 
         <!-- Texto do lado direito -->
         <div class="split-box right">
-            <img class="image-engineering" src="./image/effect.jpg" alt="effect"> <!--vinicius.scherer - Não tem nd linkado-->
-
+            <img src="./image/effect.png" alt="effect" class="engineering-image">
             <h2>Engenharia.</h2>
             <p>
                 Na criação de aplicativos JavaScript, estou equipado com as ferramentas certas e posso funcionar
