--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,8 @@
     <title>Portfólio - Imfeliperamos</title>
     <link rel="stylesheet" href="./style/pageone.css"> <!-- Primeira Página -->
     <link rel="stylesheet" href="./style/pagetwo.css"> <!-- Segunda Página -->
-    <link rel="stylesheet" href="./style/menu.css"> <!-- Segunda Página -->
+    <link rel="stylesheet" href="./style/menu.css"> <!-- Meu Menu -->
+    <link rel="stylesheet" href="./style/footer.css"> <!-- Footer -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -123,7 +124,16 @@
 
     <!-- FOOTER -->
     <footer class="footer">
-    </footer>
+        <div class="footer-container">
+          <p class="footer-text">© 2025 Felipe. Todos os direitos reservados.</p>
+          <div class="footer-links">
+            <a href="EM BREVE" class="footer-link">Sobre</a>
+            <a href="EM BREVE" class="footer-link">LinkedIn</a>
+            <a href="EM BREVE" class="footer-link">Contato</a>
+          </div>
+          </div>
+        </div>
+      </footer>      
 
     <script src="./script/menu.js"></script>
 
